syntax = "proto3";

package api;

import "google/api/annotations.proto";

message SignUpReq {
    string email = 1;
    string fullname = 2;
    string password = 3;
    string team = 4;
}

message SignUpRes {
    bool created = 1;   
}

message SignInReq {
    string username = 1;
    string password = 2;
    string team = 3;
}

message SignInRes {
    bool valid = 1;
}

service User {

    rpc SignUp(SignUpReq) returns (SignUpRes) {
        option (google.api.http) = { post : "/v1/user/signup" body : "*" };
    };

    rpc SignIn(SignInReq) returns (SignInRes) {
        option (google.api.http) = { post : "/v1/user/signin" body : "*" };
    };
}
